--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask
-Flask-Cors
-Flask-SQLAlchemy
-flask-marshmallow
-marshmallow-SQLAlchemy
+Flask==2.2.2
+Flask-Cors==3.0.10
+Flask-SQLAlchemy==2.5.1
+flask-marshmallow==0.14.0
+marshmallow-SQLAlchemy==0.28.1
+SQLAlchemy==1.3.23
