--- a/Pipfile
+++ b/Pipfile
@@ -9,11 +9,12 @@ flake8 = "*"
 pytest = "*"
 
 [packages]
-flask = "*"
-flask-cors = "*"
-flask-sqlalchemy = "*"
-flask-marshmallow = "*"
-marshmallow-sqlalchemy = "*"
+flask = "2.2.2"
+flask-cors = "3.0.10"
+flask-sqlalchemy = "2.5.1"
+flask-marshmallow = "0.14.0"
+marshmallow-sqlalchemy = "0.28.1"
+SQLAlchemy = "1.3.23"
 
 [requires]
 python_version = "3.8"
