--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -42,7 +42,7 @@ jobs:
         if [ $UPDATED == "1" ]; then
         git config user.name github-actions;
         git config user.email github-actions@github.com;
-        git add . ;
+        git add README.md ;
         git commit -m "updated coverage file";
         git push;
         fi;
