--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,6 +19,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.8"
+    - name: Create .env file
+      run: |
+        touch ./src/api/.env;
+        echo USER_ROLE_UUID=TEST_USER >> ./src/api/.env;
+        echo ADMIN_ROLE_UUID=TEST_ADMIN >> ./src/api/.env;
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
