--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -24,6 +24,8 @@ jobs:
         touch ./src/api/.env;
         echo USER_ROLE_UUID=TEST_USER >> ./src/api/.env;
         echo ADMIN_ROLE_UUID=TEST_ADMIN >> ./src/api/.env;
+        echo EMAIL_USERNAME=isea.sender@gmail.com >> ./src/api/.env
+        echo EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }} 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
