--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -26,7 +26,7 @@ jobs:
         echo ADMIN_ROLE_UUID=TEST_ADMIN >> ./src/api/.env;
         echo APPLICATION_URL=TBD >> ./src/api/.env;
         echo EMAIL_USERNAME=isea.sender@gmail.com >> ./src/api/.env
-        echo EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }} 
+        echo EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }} >> ./src/api/.env
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
