--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -27,6 +27,10 @@ jobs:
         echo APPLICATION_URL=https://127.0.0.1:5555 >> ./src/api/.env;
         echo EMAIL_USERNAME=isea.sender@gmail.com >> ./src/api/.env
         echo EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }} >> ./src/api/.env
+    - name: create fake certs for testing
+      run: |
+        mkdir .certs
+        openssl req -x509 -newkey rsa:4096 -keyout ./.certs/key.pem -out ./.certs/cert.pem -sha256 -days 365
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
