--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -30,7 +30,7 @@ jobs:
     - name: create fake certs for testing
       run: |
         mkdir .certs
-        openssl req -nodes -x509 -newkey -keyout ./.certs/key.pem -out ./.certs/cert.pem
+        openssl req -nodes -x509 -newkey rsa:4096 -keyout ./.certs/key.pem -out ./.certs/cert.pem -sha256
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
